# NeuralNetworkFromScratch

./: .mypy.ini  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
docs/: requirements.txt
src/: basic_neuron.py
