[tool.poetry]
name = "neuralnetworkfromscratch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.7.0"
mypy = "^0.812"
Sphinx = "^3.5.1"
coverage = "^5.5"
coveralls = "^3.0.1"
tox = "^3.23.0"
pytest = "^6.2.2"
pytest-testdox = "^2.0.1"
safety = "^1.10.3"
pre-commit = "^2.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ['py37','py38']
include = ''
exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 90
skip_glob = ["docs", "notes"]
